--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@
 }
 
 .main__controls {
-    background-color: #1C1E20;
+    background-color:#212529;
 }
 
 .main__right {
@@ -64,6 +64,7 @@
 .main__right {
     display: flex;
     flex-direction: column;
+    background-color: #212529;
 }
 
 .main__header {
