--- a/views/room.ejs
+++ b/views/room.ejs
@@ -23,7 +23,7 @@
       }
       video{
          height: 300px;
-         width: 400px;
+         width: 500px;
          object-fit: cover;
          padding: 8px;
       }
@@ -49,27 +49,11 @@
                </div>
             </div>
             <div class="main__controls__block">
-               <div class="main__controls__button">
-                  <i class="fas fa-shield-alt"></i>
-                  <span>Security</span>
-               </div>
-               <div class="main__controls__button">
-                  <i class="fas fa-user-friends"></i>
-                  <span>Participants</span>
-               </div>
-               <div class="main__controls__button">
-                  <i class="fas fa-comment-alt"></i>
-                  <span>Chat</span>
-               </div>
-            </div>
-            <div class="main__controls__block">
-               <div class="main__controls__button">
-                  <span class="leave_meeting">Leave Meeting</span>
-               </div>
+                 <img src="./Easy_To_Hire_logo.png" width="125">
             </div>
          </div>
       </div>
-      <div class="main__right">
+      <div class="main__right" id="chatwindow">
          <div class="main__header">
             <h6>Chat</h6>
          </div>
